--- a/scripts/notebook.ipynb
+++ b/scripts/notebook.ipynb
@@ -53,7 +53,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "git pull: Me traigo todo lo que hay en la rama.\n",
+    "\n",
+    "aca trabajas. o hago como que trabajo\n",
+    "\n",
+    "git add: Acá selecciono lo que quiero subir a la rama y que los demás puedan verlo.\n",
+    "git commit -m. Acá escribo lo que hice, para que los demás entiendan y sepan q hice.\n",
+    "git push. Acá envío todo hacia la nube."
+   ]
   }
  ],
  "metadata": {
