--- a/scripts/notebook.ipynb
+++ b/scripts/notebook.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
     }
    ],
    "source": [
-    "df.hist()"
+    "df.hist()asdas"
    ]
   },
   {
